[meson] add with_zstd to meson_options.txt

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -148,6 +148,11 @@ option('with_zlib',
 	value: true,
 	description: 'with deflate-support for mod_deflate [default: on]',
 )
+option('with_zstd',
+	type: 'boolean',
+	value: false,
+	description: 'with zstd-support for mod_deflate [default: off]',
+)
 
 option('build_extra_warnings',
 	type: 'boolean',
