--- a/src/SConscript
+++ b/src/SConscript
@@ -82,6 +82,7 @@ src = Split("server.c response.c connections.c h2.c reqpool.c \
 	sock_addr_cache.c \
 	ls-hpack/lshpack.c \
 	algo_xxhash.c \
+	http_range.c \
 	network.c \
 	network_write.c \
 	data_config.c \
