[core] http_cgi.[ch] CGI interfaces (RFC 3875)
collect Common Gateway Interface (CGI) interfaces (RFC 3875)

--- a/src/SConscript
+++ b/src/SConscript
@@ -70,6 +70,7 @@ common_src = Split("base64.c buffer.c burl.c log.c \
 	configfile-glue.c \
 	http-header-glue.c \
 	http_auth.c \
+	http_cgi.c \
 	http_date.c \
 	http_vhostdb.c \
 	request.c \
