[build] check for mempcpy()

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -169,6 +169,7 @@ check_function_exists(localtime_r HAVE_LOCALTIME_R)
 check_function_exists(lstat HAVE_LSTAT)
 check_function_exists(madvise HAVE_MADVISE)
 check_function_exists(memcpy HAVE_MEMCPY)
+check_function_exists(mempcpy HAVE_MEMPCPY)
 check_function_exists(memset HAVE_MEMSET)
 check_function_exists(mmap HAVE_MMAP)
 check_function_exists(pathconf HAVE_PATHCONF)
