[build] fix zstd option in meson (fixes #3076)
(thx KimonHoffmann)

x-ref:
  "Fix zstd dependency handling in meson build"
  https://redmine.lighttpd.net/issues/3076

--- a/src/meson.build
+++ b/src/meson.build
@@ -686,7 +686,7 @@ endif
 
 libzstd = []
 if get_option('with_zstd')
-	libz = dependency('zstd', required: false)
+	libzstd = dependency('zstd', required: false)
 	if libzstd.found()
 		libzstd = [ libzstd ]
 	else
