--- a/src/SConscript
+++ b/src/SConscript
@@ -272,7 +272,7 @@ for libs in staticlib:
 ## glibc pthread needs to be linked completely (especially nptl-init.o)
 ## or not at all, or else pthread structures may not be initialized correctly
 import platform
-fullstatic_libs = GatherLibs(env, fullstaticlib)
+fullstatic_libs = GatherLibs(env, fullstaticlib, env['LIBPCRE'])
 fullstatic_linkflags = [staticenv['LINKFLAGS'], '-static']
 if (('pthread' in fullstatic_libs) or ('pcre' in fullstatic_libs)) and (platform.system() == 'Linux'):
 	fullstatic_linkflags += ['-Wl,--whole-archive','-lpthread','-Wl,--no-whole-archive']
