[core] _WIN32 sys-unistd.h to wrap <unistd.h>
(selective implementations; not complete)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -362,7 +362,7 @@ hdr = base64.h buffer.h burl.h network.h log.h http_kv.h keyvalue.h \
 	sys-crypto.h sys-crypto-md.h sys-dirent.h \
 	sys-endian.h sys-mmap.h sys-setjmp.h \
 	sys-socket.h sys-stat.h sys-strings.h \
-	sys-time.h \
+	sys-time.h sys-unistd.h \
 	sock_addr.h \
 	mod_auth_api.h \
 	mod_magnet_cache.h \
