[core] move data_{array,integer,string} to array.c
move native data_* types into array.c
(the types are already declared in array.h)

The array data structure remains extendable, as is done with data_config
(configfile) and data_auth (mod_auth), though array data structure
primary uses are at startup (config time) and header parsing.  The
insertion logic into sorted list can be expensive for large lists,
so header parsing might choose a different data structure in the future.

--- a/src/meson.build
+++ b/src/meson.build
@@ -716,9 +716,6 @@ common_src = [
 	'chunk.c',
 	'configfile-glue.c',
 	'connections-glue.c',
-	'data_array.c',
-	'data_integer.c',
-	'data_string.c',
 	'http_etag.c',
 	'fdevent_freebsd_kqueue.c',
 	'fdevent_libev.c',
@@ -864,7 +861,7 @@ executable('lighttpd', configparser,
 )
 
 test('test_array', executable('test_array',
-	sources: ['t/test_array.c', 'array.c', 'data_array.c', 'data_integer.c', 'data_string.c', 'buffer.c'],
+	sources: ['t/test_array.c', 'array.c', 'buffer.c'],
 	dependencies: common_flags + libunwind,
 	build_by_default: false,
 ))
@@ -893,8 +890,6 @@ test('test_configfile', executable('test_configfile',
 		'buffer.c',
 		'array.c',
 		'data_config.c',
-		'data_integer.c',
-		'data_string.c',
 		'http_header.c',
 		'http_kv.c',
 		'vector.c',
@@ -912,8 +907,6 @@ test('test_keyvalue', executable('test_keyvalue',
 		'buffer.c',
 		'base64.c',
 		'array.c',
-		'data_integer.c',
-		'data_string.c',
 		'log.c',
 	],
 	dependencies: common_flags + libpcre + libunwind,
@@ -925,8 +918,6 @@ test('test_mod_access', executable('test_mod_access',
 		't/test_mod_access.c',
 		'buffer.c',
 		'array.c',
-		'data_integer.c',
-		'data_string.c',
 		'log.c',
 	],
 	dependencies: common_flags + libunwind,
@@ -938,8 +929,6 @@ test('test_mod_evhost', executable('test_mod_evhost',
 		't/test_mod_evhost.c',
 		'buffer.c',
 		'array.c',
-		'data_integer.c',
-		'data_string.c',
 		'log.c',
 	],
 	dependencies: common_flags + libunwind,
@@ -951,8 +940,6 @@ test('test_mod_simple_vhost', executable('test_mod_simple_vhost',
 		't/test_mod_simple_vhost.c',
 		'buffer.c',
 		'array.c',
-		'data_integer.c',
-		'data_string.c',
 		'log.c',
 	],
 	dependencies: common_flags + libunwind,
@@ -964,8 +951,6 @@ test('test_mod_userdir', executable('test_mod_userdir',
 		't/test_mod_userdir.c',
 		'buffer.c',
 		'array.c',
-		'data_integer.c',
-		'data_string.c',
 		'log.c',
 	],
 	dependencies: common_flags + libunwind,
@@ -979,8 +964,6 @@ test('test_request', executable('test_request',
 		'buffer.c',
 		'burl.c',
 		'array.c',
-		'data_integer.c',
-		'data_string.c',
 		'http_header.c',
 		'http_kv.c',
 		'log.c',
