--- a/src/meson.build
+++ b/src/meson.build
@@ -727,13 +727,11 @@ common_src = [
 	'fdevent_solaris_port.c',
 	'fdevent.c',
 	'gw_backend.c',
-	'http_auth.c',
 	'http_cgi.c',
 	'http_chunk.c',
 	'http_date.c',
 	'http_header.c',
 	'http_kv.c',
-	'http_vhostdb.c',
 	'http-header-glue.c',
 	'keyvalue.c',
 	'log.c',
@@ -986,7 +984,7 @@ modules = [
 	[ 'mod_accesslog', [ 'mod_accesslog.c' ] ],
 	[ 'mod_ajp13', [ 'mod_ajp13.c' ] ],
 	[ 'mod_alias', [ 'mod_alias.c' ] ],
-	[ 'mod_auth', [ 'mod_auth.c' ], [ libcrypto ] ],
+	[ 'mod_auth', [ 'mod_auth.c', 'http_auth.c' ], [ libcrypto ] ],
 	[ 'mod_authn_file', [ 'mod_authn_file.c' ], [ libcrypt, libcrypto ] ],
 	[ 'mod_deflate', [ 'mod_deflate.c' ], libbz2 + libz + libzstd + libbrotli ],
 	[ 'mod_dirlisting', [ 'mod_dirlisting.c' ] ],
@@ -1012,7 +1010,7 @@ modules = [
 	[ 'mod_uploadprogress', [ 'mod_uploadprogress.c' ] ],
 	[ 'mod_userdir', [ 'mod_userdir.c' ] ],
 	[ 'mod_usertrack', [ 'mod_usertrack.c' ], libcrypto ],
-	[ 'mod_vhostdb', [ 'mod_vhostdb.c' ] ],
+	[ 'mod_vhostdb', [ 'mod_vhostdb.c', 'http_vhostdb.c' ] ],
 	[ 'mod_webdav', [ 'mod_webdav.c' ], libsqlite3 + libuuid + libxml2 + libelftc ],
 	[ 'mod_wstunnel', [ 'mod_wstunnel.c' ], libcrypto ],
 ]
