[mod_auth*] rename http_auth.* -> mod_auth_api.*
rename http_auth.[ch] -> mod_auth_api.[ch]

--- a/src/meson.build
+++ b/src/meson.build
@@ -984,7 +984,7 @@ modules = [
 	[ 'mod_accesslog', [ 'mod_accesslog.c' ] ],
 	[ 'mod_ajp13', [ 'mod_ajp13.c' ] ],
 	[ 'mod_alias', [ 'mod_alias.c' ] ],
-	[ 'mod_auth', [ 'mod_auth.c', 'http_auth.c' ], [ libcrypto ] ],
+	[ 'mod_auth', [ 'mod_auth.c', 'mod_auth_api.c' ], [ libcrypto ] ],
 	[ 'mod_authn_file', [ 'mod_authn_file.c' ], [ libcrypt, libcrypto ] ],
 	[ 'mod_deflate', [ 'mod_deflate.c' ], libbz2 + libz + libzstd + libbrotli ],
 	[ 'mod_dirlisting', [ 'mod_dirlisting.c' ] ],
