--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -810,7 +810,7 @@ add_and_install_library(mod_access mod_access.c)
 add_and_install_library(mod_accesslog mod_accesslog.c)
 add_and_install_library(mod_ajp13 mod_ajp13.c)
 add_and_install_library(mod_alias mod_alias.c)
-add_and_install_library(mod_auth "mod_auth.c;http_auth.c")
+add_and_install_library(mod_auth "mod_auth.c;mod_auth_api.c")
 add_and_install_library(mod_authn_file "mod_authn_file.c")
 if(NOT WIN32)
 	add_and_install_library(mod_cgi mod_cgi.c)
