--- a/src/SConscript
+++ b/src/SConscript
@@ -101,7 +101,7 @@ modules = {
 	'mod_accesslog' : { 'src' : [ 'mod_accesslog.c' ] },
 	'mod_ajp13' : { 'src' : [ 'mod_ajp13.c' ] },
 	'mod_alias' : { 'src' : [ 'mod_alias.c' ] },
-	'mod_auth' : { 'src' : [ 'mod_auth.c', 'http_auth.c' ], 'lib' : [ env['LIBCRYPTO'] ] },
+	'mod_auth' : { 'src' : [ 'mod_auth.c', 'mod_auth_api.c' ], 'lib' : [ env['LIBCRYPTO'] ] },
 	'mod_authn_file' : { 'src' : [ 'mod_authn_file.c' ], 'lib' : [ env['LIBCRYPT'], env['LIBCRYPTO'] ] },
 	'mod_cgi' : { 'src' : [ 'mod_cgi.c' ] },
 	'mod_deflate' : { 'src' : [ 'mod_deflate.c' ], 'lib' : [ env['LIBZ'], env['LIBZSTD'], env['LIBBZ2'], env['LIBBROTLI'], 'm' ] },
