[build] look for port.h on Solaris, not sys/port.h

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -96,7 +96,6 @@ check_include_files(sys/inotify.h HAVE_SYS_INOTIFY_H)
 check_include_files(sys/mman.h HAVE_SYS_MMAN_H)
 check_include_files(sys/loadavg.h HAVE_SYS_LOADAVG_H)
 check_include_files(sys/poll.h HAVE_SYS_POLL_H)
-check_include_files(sys/port.h HAVE_SYS_PORT_H)
 check_include_files(sys/prctl.h HAVE_SYS_PRCTL_H)
 check_include_files(sys/resource.h HAVE_SYS_RESOURCE_H)
 check_include_files(sys/sendfile.h HAVE_SYS_SENDFILE_H)
@@ -111,6 +110,7 @@ check_include_files(pthread.h HAVE_PTHREAD_H)
 check_include_files(getopt.h HAVE_GETOPT_H)
 check_include_files(inttypes.h HAVE_INTTYPES_H)
 check_include_files(poll.h HAVE_POLL_H)
+check_include_files(port.h HAVE_PORT_H)
 check_include_files(pwd.h HAVE_PWD_H)
 check_include_files(stddef.h HAVE_STDDEF_H)
 check_include_files(stdint.h HAVE_STDINT_H)
