--- a/src/meson.build
+++ b/src/meson.build
@@ -33,7 +33,6 @@ conf_data.set('HAVE_SYS_INOTIFY_H', compiler.has_header('sys/inotify.h'))
 conf_data.set('HAVE_SYS_LOADAVG_H', compiler.has_header('sys/loadavg.h'))
 conf_data.set('HAVE_SYS_MMAN_H', compiler.has_header('sys/mman.h'))
 conf_data.set('HAVE_SYS_POLL_H', compiler.has_header('sys/poll.h'))
-conf_data.set('HAVE_SYS_PORT_H', compiler.has_header('sys/port.h'))
 conf_data.set('HAVE_SYS_PRCTL_H', compiler.has_header('sys/prctl.h'))
 conf_data.set('HAVE_SYS_RESOURCE_H', compiler.has_header('sys/resource.h'))
 conf_data.set('HAVE_SYS_SENDFILE_H', compiler.has_header('sys/sendfile.h'))
@@ -48,6 +47,7 @@ conf_data.set('HAVE_PTHREAD_H', compiler.has_header('pthread.h'))
 conf_data.set('HAVE_GETOPT_H', compiler.has_header('getopt.h'))
 conf_data.set('HAVE_INTTYPES_H', compiler.has_header('inttypes.h'))
 conf_data.set('HAVE_POLL_H', compiler.has_header('poll.h'))
+conf_data.set('HAVE_PORT_H', compiler.has_header('port.h'))
 conf_data.set('HAVE_PWD_H', compiler.has_header('pwd.h'))
 conf_data.set('HAVE_STDDEF_H', compiler.has_header('stddef.h'))
 conf_data.set('HAVE_STDINT_H', compiler.has_header('stdint.h'))
