--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -109,6 +109,7 @@ check_include_files(unistd.h HAVE_UNISTD_H)
 check_include_files(pthread.h HAVE_PTHREAD_H)
 check_include_files(getopt.h HAVE_GETOPT_H)
 check_include_files(inttypes.h HAVE_INTTYPES_H)
+check_include_files(malloc.h HAVE_MALLOC_H)
 check_include_files(poll.h HAVE_POLL_H)
 check_include_files(port.h HAVE_PORT_H)
 check_include_files(pwd.h HAVE_PWD_H)
@@ -172,6 +173,7 @@ check_function_exists(kqueue HAVE_KQUEUE)
 check_function_exists(localtime_r HAVE_LOCALTIME_R)
 check_function_exists(lstat HAVE_LSTAT)
 check_function_exists(madvise HAVE_MADVISE)
+check_function_exists(mallopt HAVE_MALLOPT)
 check_function_exists(memcpy HAVE_MEMCPY)
 check_function_exists(mempcpy HAVE_MEMPCPY)
 check_function_exists(memset HAVE_MEMSET)
