--- a/src/meson.build
+++ b/src/meson.build
@@ -48,6 +48,7 @@ conf_data.set('HAVE_UNISTD_H', compiler.has_header('unistd.h'))
 conf_data.set('HAVE_PTHREAD_H', compiler.has_header('pthread.h'))
 conf_data.set('HAVE_GETOPT_H', compiler.has_header('getopt.h'))
 conf_data.set('HAVE_INTTYPES_H', compiler.has_header('inttypes.h'))
+conf_data.set('HAVE_MALLOC_H', compiler.has_header('malloc.h'))
 conf_data.set('HAVE_POLL_H', compiler.has_header('poll.h'))
 conf_data.set('HAVE_PORT_H', compiler.has_header('port.h'))
 conf_data.set('HAVE_PWD_H', compiler.has_header('pwd.h'))
@@ -124,6 +125,7 @@ conf_data.set('HAVE_KQUEUE', compiler.has_function('kqueue', args: defs))
 conf_data.set('HAVE_LOCALTIME_R', compiler.has_function('localtime_r', args: defs))
 conf_data.set('HAVE_LSTAT', compiler.has_function('lstat', args: defs))
 conf_data.set('HAVE_MADVISE', compiler.has_function('madvise', args: defs))
+conf_data.set('HAVE_MALLOPT', compiler.has_function('mallopt', args: defs))
 conf_data.set('HAVE_MEMCPY', compiler.has_function('memcpy', args: defs))
 conf_data.set('HAVE_MEMPCPY', compiler.has_function('mempcpy', args: defs))
 conf_data.set('HAVE_MEMSET', compiler.has_function('memset', args: defs))
