--- a/tests/lighttpd.conf
+++ b/tests/lighttpd.conf
@@ -11,11 +11,14 @@ server.document-root       = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org
 server.errorlog            = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.error.log"
 server.breakagelog         = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.breakage.log"
 server.name                = "www.example.org"
-server.tag                 = "Apache 1.3.29"
+server.tag                 = "lighttpd-1.4.x"
 
 server.dir-listing          = "enable"
 
 server.modules = (
+	"mod_extforward",
+	"mod_auth",
+	"mod_authn_file",
 	"mod_setenv",
 	"mod_access",
 	"mod_expire",
@@ -23,6 +26,9 @@ server.modules = (
 	"mod_cgi",
 	"mod_userdir",
 	"mod_ssi",
+	"mod_status",
+	"mod_secdownload",
+	"mod_deflate",
 	"mod_accesslog",
 )
 
@@ -84,6 +90,12 @@ cgi.assign = (
 	".cgi" => env.PERL,
 )
 
+extforward.headers = ( "Forwarded", "X-Forwarded-For" )
+extforward.forwarder = (
+	"127.0.0.1" => "trust",
+	"127.0.30.1" => "trust",
+)
+
 userdir.include-user = (
 	"jan",
 )
@@ -99,30 +111,20 @@ expire.url = (
 	"/expire/modification" => "access plus 1 seconds 2 minutes",
 )
 
-$HTTP["host"] == "zzz.example.org" {
-	server.document-root = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
-	server.name = "zzz.example.org"
-	static-file.disable-pathinfo = "enable"
-}
-
 $HTTP["host"] == "symlink.example.org" {
 	server.document-root = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
-	server.name = "symlink.example.org"
 	server.follow-symlink = "enable"
 }
 
 $HTTP["host"] == "nosymlink.example.org" {
 	server.document-root = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
-	server.name = "symlink.example.org"
 	server.follow-symlink = "disable"
 }
 
 $HTTP["host"] == "no-simple.example.org" {
 	server.document-root = env.SRCDIR + "/tmp/lighttpd/servers/123.example.org/pages/"
-	server.name = "zzz.example.org"
 }
-
-$HTTP["host"] !~ "(no-simple\.example\.org)" {
+else {
 	simple-vhost.document-root  = "pages"
 	simple-vhost.server-root    = env.SRCDIR + "/tmp/lighttpd/servers/"
 	simple-vhost.default-host   = "www.example.org"
@@ -164,12 +166,119 @@ $HTTP["host"] =~ "allow\.example\.org$" {
 	url.access-deny = ( ".txt" )
 }
 
-$HTTP["host"] == "etag.example.org" {
-	static-file.etags = "disable"
-}
-
 $HTTP["host"] == "cgi.example.org" {
 	index-file.names = ( "nonexistent.txt", "index.pl" )
         server.error-handler-404 = "/indexfile/index.pl"
 	cgi.x-sendfile = "enable"
+}
+
+$HTTP["host"] == "errors.example.org" {
+	$HTTP["url"] =~ "^/static/" {
+		server.error-handler-404 = "/404.html"
+	}
+	else $HTTP["url"] =~ "^/dynamic/redirect_status/" {
+		server.error-handler     = "/404.pl"
+	}
+	else $HTTP["url"] =~ "." {
+		server.error-handler-404 = "/404.pl"
+	}
+}
+
+$HTTP["host"] == "lowercase-allow" {
+	server.force-lowercase-filenames = "enable"
+}
+$HTTP["host"] == "lowercase-deny" {
+	server.force-lowercase-filenames = "enable"
+	url.access-deny = (
+		".jpg",
+	)
+}
+$HTTP["host"] == "lowercase-exclude" {
+	server.force-lowercase-filenames = "enable"
+	static-file.exclude-extensions = (
+		".jpg",
+	)
+}
+$HTTP["host"] == "lowercase-auth" {
+	server.force-lowercase-filenames = "enable"
+	auth.backend = "plain"
+	auth.backend.plain.userfile = env.SRCDIR + "/tmp/lighttpd/lighttpd.user"
+	auth.require = (
+		"/image.jpg" => (
+			"method"  => "digest",
+			"realm"   => "download archiv",
+			"require" => "valid-user",
+		),
+	)
+}
+
+$HTTP["host"] =~ "^deflate(?:-cache)?\.example\.org$" {
+	$HTTP["url"] == "/index.txt" {
+		# (force Content-Type for test; do not copy)
+		setenv.set-response-header = (
+		  "Content-Type" => "text/plain; charset=utf-8"
+		)
+	}
+	deflate.mimetypes = (
+		"text/plain",
+		"text/html",
+	)
+	deflate.allowed-encodings = (
+		"gzip",
+		"deflate",
+	)
+	$HTTP["host"] == "deflate-cache.example.org" {
+		deflate.cache-dir = env.SRCDIR + "/tmp/lighttpd/cache/compress/"
+	}
+}
+
+$HTTP["host"] =~ "^auth-" {
+	$HTTP["host"] == "auth-htpasswd.example.org" {
+		auth.backend = "htpasswd"
+		auth.backend.htpasswd.userfile = env.SRCDIR + "/tmp/lighttpd/lighttpd.htpasswd"
+	}
+	$HTTP["host"] == "auth-plain.example.org" {
+		auth.backend = "plain"
+		auth.backend.plain.userfile = env.SRCDIR + "/tmp/lighttpd/lighttpd.user"
+	}
+	auth.require = (
+		"/server-status" => (
+			"method"  => "digest",
+			"realm"   => "download archiv",
+			"require" => "group=www|user=jan|host=192.168.2.10",
+		),
+		"/server-config" => (
+			"method"  => "basic",
+			"realm"   => "download archiv",
+			"require" => "valid-user",
+		),
+	)
+	status.status-url = "/server-status"
+	status.config-url = "/server-config"
+}
+
+$HTTP["host"] == "vvv.example.org" {
+	server.document-root = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
+	secdownload.secret          = "verysecret"
+	secdownload.document-root   = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
+	secdownload.uri-prefix      = "/sec/"
+	secdownload.timeout         = 120
+	secdownload.algorithm       = "md5"
+}
+$HTTP["host"] == "vvv-sha1.example.org" {
+	server.document-root = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
+	secdownload.secret          = "verysecret"
+	secdownload.document-root   = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
+	secdownload.uri-prefix      = "/sec/"
+	secdownload.timeout         = 120
+	secdownload.algorithm       = "hmac-sha1"
+}
+$HTTP["host"] == "vvv-sha256.example.org" {
+	server.document-root = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
+	secdownload.secret          = "verysecret"
+	secdownload.document-root   = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
+	secdownload.uri-prefix      = "/sec/"
+	secdownload.timeout         = 120
+	secdownload.algorithm       = "hmac-sha256"
+	secdownload.hash-querystr   = "enable"
 }
