--- a/tests/meson.build
+++ b/tests/meson.build
@@ -13,24 +13,11 @@ env.set('srcdir', meson.current_source_dir())
 env.set('top_builddir', meson.build_root())
 
 tests = [
-	'core-404-handler.t',
-	'core-condition.t',
-	'core-keepalive.t',
-	'core-request.t',
-	'core-response.t',
-	'core-var-include.t',
-	'lowercase.t',
-	'mod-auth.t',
-	'mod-cgi.t',
-	'mod-deflate.t',
-	'mod-extforward.t',
-	'mod-fastcgi.t',
-	'mod-proxy.t',
-	'mod-secdownload.t',
-	'mod-setenv.t',
-	'mod-ssi.t',
 	'request.t',
-	'symlink.t',
+	'core-condition.t',
+	'core-var-include.t',
+	'mod-fastcgi.t',
+	'mod-scgi.t',
 ]
 
 # just hope it will run the tests in the given order
