--- a/tests/condition.conf
+++ b/tests/condition.conf
@@ -6,7 +6,7 @@ server.document-root         = env.SRCDIR + "/tmp/lighttpd/servers/www.example.o
 server.errorlog            = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.error.log"
 server.breakagelog         = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.breakage.log"
 server.name                = "www.example.org"
-server.tag                 = "Apache 1.3.29"
+server.tag                 = "lighttpd-1.4.x"
 
 server.compat-module-load = "disable"
 server.modules = (
@@ -77,6 +77,13 @@ else $HTTP["host"] == "test4.example.org" {
 			"^" => "/match_7",
 		)
 	}
+}
+else $HTTP["host"] == "test.example.org" {
+	server.document-root = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
+	server.name = "test.example.org"
+	var.myvar = "good"
+	var.one = 1
+	include "var-include-sub.conf"
 }
 
 $HTTP["url"] != "/show/other/server-tag" {
