--- a/configure.ac
+++ b/configure.ac
@@ -1554,6 +1554,7 @@ AC_ARG_ENABLE([lfs],
 AC_MSG_RESULT([$ENABLE_LFS])
 if test "$ENABLE_LFS" = yes; then
   CPPFLAGS="${CPPFLAGS} -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGE_FILES"
+  AC_SYS_LARGEFILE
 fi
 
 dnl check if sendfile works
