[build] check for sys/filio.h in CMake and meson
present in configure.ac and SConstruct,
but missing from src/CMakeLists.txt and src/meson.build

--- a/src/meson.build
+++ b/src/meson.build
@@ -30,6 +30,7 @@ conf_data = configuration_data()
 conf_data.set('HAVE_SYS_DEVPOLL_H', compiler.has_header('sys/devpoll.h'))
 conf_data.set('HAVE_SYS_EPOLL_H', compiler.has_header('sys/epoll.h'))
 conf_data.set('HAVE_SYS_EVENT_H', compiler.has_header('sys/event.h'))
+conf_data.set('HAVE_SYS_FILIO_H', compiler.has_header('sys/filio.h'))
 conf_data.set('HAVE_SYS_INOTIFY_H', compiler.has_header('sys/inotify.h'))
 conf_data.set('HAVE_SYS_LOADAVG_H', compiler.has_header('sys/loadavg.h'))
 conf_data.set('HAVE_SYS_MMAN_H', compiler.has_header('sys/mman.h'))
