[mod_magnet] expose md and hmac funcs to lua
lighty.c.md("algo", "data")
lighty.c.hmac("algo", "secret", "data")

"algo" can be one of: "md5", "sha1", "sha256", "sha512"
(as long as lighttpd compiled w/ crypto lib supporting those algorithms)

lighty.c.digest_eq("digest1", "digest2")
- performs a timing-safe, case-insensitive comparison of two hex digests
- "digest1" and "digest2" are hex strings (of binary digests)
- returns boolean true or false

lighty.c.secret_eq("data1", "data2")
- performs a timing-safe comparison of two strings
  (and attempts to hides differences in string lengths)
- "data1" and "data2" are strings
- returns boolean true or false

lighty.c.time()
- cached time(); seconds since 1 Jan 1970 00:00:00 GMT
  (faster than os.time())

lighty.c.rand()
- generate pseudo-random number

Note: the "lighty.c.*" namespace is EXPERIMENTAL / UNSTABLE
In the future, these may be removed, altered, or moved to a different
namespace.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -987,8 +987,8 @@ if(WITH_PCRE AND (WITH_MEMCACHED OR WITH_GDBM))
 endif()
 
 if(WITH_LUA)
-	add_and_install_library(mod_magnet "mod_magnet.c;mod_magnet_cache.c")
-	target_link_libraries(mod_magnet ${LUA_LDFLAGS})
+	add_and_install_library(mod_magnet "mod_magnet.c;mod_magnet_cache.c;algo_hmac.c")
+	target_link_libraries(mod_magnet ${LUA_LDFLAGS} ${CRYPTO_LIBRARY})
 	add_target_properties(mod_magnet COMPILE_FLAGS ${LUA_CFLAGS})
 
 	add_and_install_library(mod_cml "mod_cml.c;mod_cml_lua.c;mod_cml_funcs.c")
